# assignment-2-dvc

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  dvc-1-get-started.ipynb  dvc.yaml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
data/: .gitignore  iris2.csv.dvc
docs/: DEVELOPMENT.md
models/: model.joblib.dvc
src/: evaluate.py  featurize.py  load_data.py  split_dataset.py  train.py
tests/: test_load_data.py
